--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <body>
     <button id="btnSubmit">Add 1 to data.json</button>
     <br />
-    <p class="text"></p>
+    <p id="text"></p>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
